// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Access Control Alice should be able to fetch users from api 1`] = `
Array [
  Object {
    "id": 1,
    "username": "Alice",
  },
  Object {
    "id": 2,
    "username": "Bob",
  },
  Object {
    "id": 3,
    "username": "John",
  },
]
`;

exports[`User Access Control Alice should be not be able to see the passwords of others 1`] = `
Array [
  Object {
    "id": 1,
    "password": "alice",
    "username": "Alice",
  },
  Object {
    "id": 2,
    "password": null,
    "username": "Bob",
  },
  Object {
    "id": 3,
    "password": null,
    "username": "John",
  },
]
`;

exports[`User Access Control Alice should be not be able to see the passwords of others 2`] = `
Array [
  Object {
    "id": 1,
    "password": "alice",
    "username": "Alice",
  },
  Object {
    "id": 2,
    "password": null,
    "username": "Bob",
  },
  Object {
    "id": 3,
    "password": null,
    "username": "John",
  },
]
`;

exports[`User Access Control Alice should not be able to tunnel through project to see password 1`] = `
Array [
  Object {
    "id": 1,
    "users": Array [
      Object {
        "id": 1,
        "password": "alice",
        "username": "Alice",
      },
    ],
  },
  Object {
    "id": 2,
    "users": Array [
      Object {
        "id": 2,
        "password": null,
        "username": "Bob",
      },
      Object {
        "id": 1,
        "password": "alice",
        "username": "Alice",
      },
    ],
  },
  Object {
    "id": 3,
    "users": Array [
      Object {
        "id": 3,
        "password": null,
        "username": "John",
      },
    ],
  },
  Object {
    "id": 4,
    "users": Array [],
  },
  Object {
    "id": 5,
    "users": Array [],
  },
]
`;

exports[`User Access Control Alice should not be able to tunnel through user to see project 1`] = `
Array [
  Object {
    "id": 1,
    "projects": Array [
      Object {
        "id": 1,
        "title": "Project 1",
      },
      Object {
        "id": 2,
        "title": "Project 2",
      },
    ],
  },
  Object {
    "id": 2,
    "projects": Array [
      Object {
        "id": 2,
        "title": "Project 2",
      },
    ],
  },
  Object {
    "id": 3,
    "projects": Array [
      Object {
        "id": 3,
        "title": "Project 3",
      },
    ],
  },
]
`;

exports[`User Access Control Alice should only be able to see their project 1`] = `
Array [
  Object {
    "id": 1,
    "title": "Project 1",
  },
  Object {
    "id": 2,
    "title": "Project 2",
  },
  Object {
    "id": 3,
    "title": "Project 3",
  },
  Object {
    "id": 4,
    "title": "Project 4",
  },
  Object {
    "id": 5,
    "title": "Project 5",
  },
]
`;

exports[`User Access Control should have our 3 users in the db 1`] = `
Array [
  Object {
    "password": "alice",
    "username": "Alice",
  },
  Object {
    "password": "bob",
    "username": "Bob",
  },
  Object {
    "password": "john",
    "username": "John",
  },
]
`;
